# monte-carlo

./: .gitignore  Cargo.toml  LICENSE  README.md  monte-carlo-test.py
src/: lib.rs  monte_carlo_cpu.rs  monte_carlo_gpu.rs
